[package]
name = "cryobiobank-api"
version = "0.2.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "blocking", "rustls-tls"] }
migration = { path = "migration" }
axum = { version = "0.8.1", features = ["macros", "multipart", "json"] }
dotenvy = "0.15.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.40.0", features = ["full"] }
hyper = "1.6.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.19"
uuid = { version = "1.10.0", features = ["serde", "v4", "fast-rng"] }
chrono = { version = "0.4.39", features = ["serde"] }
sea-orm = { version = "1.1.4", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.0.1"
sea-query = "0.32.1"
utoipa = { version = "5.3.1", features = ["axum_extras", "uuid", "chrono"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
byteorder = "1.5.0"
futures = "0.3.30"
serde_with = "3.10.0"
axum-keycloak-auth = "0.7.0"
thiserror = "2.0.11"
tokio-util = "0.7.13"
jsonwebtoken = "9.3.0"
bytes = "1.10.0"
tower = "0.5.2"
validator = { version = "0.20.0", features = ["derive"] }
rand = "0.9.0"
libtest-mimic = "0.8.1"
