[package]
name = "cryobiobank-api"
version = "0.2.0"
edition = "2021"

[workspace]
members = [".", "migration"]

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.4", features = ["macros", "multipart", "json"] }
axum-keycloak-auth = "0.8.3"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
crudcrate = "0.7.2"
# crudcrate = { path = "../crudcrate/crudcrate" }
dotenvy = "0.15.7"
futures = "0.3.31"
hyper = "1.7.0"
jsonwebtoken = "9.3.1"
libtest-mimic = "0.8.1"
migration = { path = "migration" }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "blocking", "rustls-tls"] }
sea-orm = { version = "1.1.16", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
], default-features = false }
sea-orm-migration = "1.1.16"
sea-query = "0.32.7"
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"
serde_with = "3.14.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = "0.7.16"
tower = "0.5.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
utoipa = { version = "5.4.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "fast-rng"] }
validator = { version = "0.20.0", features = ["derive"] }
